--- a/ErosionDilation.ipynb
+++ b/ErosionDilation.ipynb
@@ -19,6 +19,16 @@
    "outputs": [],
    "source": [
     "# Create the text using cv2.putText\n",
+    "image1 = np.zeros((100,450), dtype = 'uint8')\n",
+    "image1 = cv2.cvtColor(image1, cv2.COLOR_BGR2RGB)\n",
+    "font = cv2.FONT_HERSHEY_TRIPLEX = 3\n",
+    "cv2.putText(image1,'soundariyan',(5,70),font,2, (0,225,0),5,cv2.LINE_AA)\n",
+    "\n",
+    "plt.figure()\n",
+    "plt.imshow(image1)\n",
+    "plt.title(\"original image\")\n",
+    "plt.axis(\"off\")\n",
+    "plt.show()\n",
     "\n",
     "\n",
     "\n"
@@ -32,7 +42,8 @@
    "source": [
     "# Create the structuring element\n",
     "\n",
-    "\n",
+    "kernel = np.ones((5,5),np.uint)\n",
+    "kernel1 = cv2.getStructuringElement(cv2.MORPH_CROSS,(2,9))\n",
     "\n"
    ]
   },
@@ -43,7 +54,7 @@
    "outputs": [],
    "source": [
     "# Erode the image\n",
-    "\n",
+    "image_erode1 = cv2.erode(image1,kernel1)\n",
     "\n",
     "\n"
    ]
@@ -55,7 +66,7 @@
    "outputs": [],
    "source": [
     "# Dilate the image\n",
-    "\n",
+    "image_dilation  = cv2.dilate(image1, kernel1)\n",
     "\n",
     "\n",
     "\n"
